--- a/hampterBall.html
+++ b/hampterBall.html
@@ -67,7 +67,7 @@
             </div>
         </div>
     </header>
-    
+
     <!--Project microgame-->
     <div class="container text-center">
         <div>
@@ -76,8 +76,10 @@
                 <div class="col">
                     <div class="card h-100 bg-dark" data-bs-theme="dark">
                         <h3 class="card-header py-2">Uitleg</h3>
-                        <p class="py-4">HampterBall is een spel gemaakt in 2023 voor de opleiding Software developer waar Rafael alcazar paradas aan
-                            aan meegewerkt heeft tijdens development. Zo heeft hij dingen gemaakt zoals ragdolls, 3d models
+                        <p class="py-4">HampterBall is een spel gemaakt in 2023 voor de opleiding Software developer
+                            waar Rafael alcazar paradas aan
+                            aan meegewerkt heeft tijdens development. Zo heeft hij dingen gemaakt zoals ragdolls, 3d
+                            models
                             en ook de code de kanon en een script voor het voorkomen dat de hamster uit de bal valt. Hij
                             heeft samen met een groep van 6 mensen gewerkt waar inclusief hijzelf, Nicole Hieltjes, Levi
                             Feunekes, Koen Polman, Fernando Kook en Alex Yefimov in zaten met als begeleider en slb'er
@@ -100,21 +102,21 @@
                             <div class="carousel-inner h-100">
                                 <!--Canon-->
                                 <div class="carousel-item active">
-                                    <img src="Canon.png" class="d-block w-100 h-100" alt="...">
+                                    <img src="Canon.png" class="d-block w-100 h-100" alt="Canon">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h5>Canon</h5>
                                     </div>
                                 </div>
                                 <!--Ragdolls-->
                                 <div class="carousel-item">
-                                    <img src="RagDolls.png" class="d-block w-100 h-100" alt="...">
+                                    <img src="RagDolls.png" class="d-block w-100 h-100" alt="ragdolls">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h5>ragdolls</h5>
                                     </div>
                                 </div>
                                 <!--Chunks-->
                                 <div class="carousel-item">
-                                    <img src="Chunks.png" class="d-block w-100 h-100" alt="...">
+                                    <img src="Chunks.png" class="d-block w-100 h-100" alt="Chunks">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h5>Chunks</h5>
 
@@ -155,20 +157,68 @@
                                 <p>Muziek</p>
                             </li>
                         </ul>
-
-
-
-
                     </div>
-
                 </div>
             </div>
         </div>
     </div>
     </div>
 
-    <!--Promotie Video-->
-    
+    <!--WerkWijze-->
+    <div class="container text-center">
+        <div>
+            <h1>WerkWijze</h1>
+            <div class="row row-cols-1 row-cols-md-3 justify-content-center">
+                <div class="col py-2">
+                    <div class="card h-100 bg-dark" data-bs-theme="dark">
+                        <h3 class="card-header py-2">week 1</h3>
+                        <p class="py-4">week 1 heb ik met me groepje over de game die we zouden maken gebrainstormed, we
+                            kwamen met veel verschillende ideeën en kwamen uiteindelijk bij het idee van hamsterball. in
+                            deze week was ik ook bezig met de models voor de; hamster, hamsterball en de eerste obstakel
+                            de trampoline.</p>
+                    </div>
+                </div>
+                <div class="col py-2">
+                    <div class="card h-100 bg-dark" data-bs-theme="dark">
+                        <h3 class="card-header py-2">week 2</h3>
+                        <p class="py-4">Week 2 hebben we met behulp van de scrum poker website de story points bepaalt
+                            voor elke taak en de business values vastgelegd en verschillende user stories opgeschreven.
+                            Ik heb deze week alle models afgekregen waaronder; de kanon, vloer tiles, Boxhandschoen en
+                            wipeout machine & en had een begin aan de ragdolls gemaakt</p>
+                    </div>
+
+                </div>
+                <div class="col py-2">
+                    <div class="card h-100 bg-dark" data-bs-theme="dark">
+                        <h3 class="card-header py-2">week 3</h3>
+                        <p class="py-4">Week 3 was de week waar we allemaal druk bezig waren met programmeren en bugs
+                            fixen van vorige week. in deze week heb ik gewerkt aan het kanon en hamster ball ragdolls te
+                            fixen </p>
+                    </div>
+                </div>
+                <div class="col py-2">
+                    <div class="card h-100 bg-dark" data-bs-theme="dark">
+                        <img src="BlenderHamster.png" class="d-block w-100 h-100" alt="...">
+                    </div>
+
+                </div>
+                <div class="col py-2">
+                    <div class="card h-100 bg-dark" data-bs-theme="dark">
+                        <h3 class="card-header py-2">week 4</h3>
+                        <p class="py-4">week 4 was de laatste week van development. in deze week hebben we alles
+                            afgekregen en heb ik gewerkt aan een script wat voorkomde dat de hamster uit de bal viel en
+                            bugs met de kanon gefixt</p>
+                    </div>
+                </div>
+                <div class="col py-2">
+                    <div class="card h-100 bg-dark" data-bs-theme="dark">
+                        <img src="ManageHamsterScript.png" class="d-block w-100 h-100" alt="...">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
 
     <!--Contacts-->
     <div class="container text-center py-2">
