--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!--Bottom text-->
     <div class="row justify-content-center container.fluid bg-warning" style="margin-top:10%; margin-bottom:2%;">
         <div class="col-xl-2 container rounded-1">
-            <img id="Picture" src="rafael.jpg" style="
+            <img id="Picture" src="Rafael.jpg" style="
             width: 80%; margin-top: 20%" class="card-img-top rounded-circle py-3 mx-auto d-block" alt="Rafael">
         </div>
         <div class="col-sm-8 container-fluid text-light p-3">
