--- a/blender.html
+++ b/blender.html
@@ -119,7 +119,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="revolver.gif" class="card-img-top" alt="revolver">
+                <img src="Revolver.gif" class="card-img-top" alt="revolver">
                 <div class="card-body">
                     <h5 class="card-title">Revolver</h5>
                     <button type="button" class="btn btn-primary">
