monogame page aangepast

--- a/monogame.html
+++ b/monogame.html
@@ -43,11 +43,13 @@
         </div>
     </nav>
 
+    <!--top text-->
     <div class="container justify-content-center d-flex" style="margin-top:5%">
         <h1 style="color:rgb(58, 64, 152)">Starlin</h2>
             <h1 style="color:red">-</h2>
                 <h1 style="color:rgb(226, 224, 67)">k</h2>
     </div>
+
     <div class="row p-4 d-flex justify-content-center">
         <div class="col-lg-3">
             <video width="400" height="600" controls>
@@ -63,59 +65,31 @@
                 workflow van monogame onder de knie en heb ik na een tijdje dit product kunnen maken met muziek,
                 graphics en werkende code.</p>
 
-                <P style="color:rgb(255, 255, 255);">
+            <P style="color:rgb(255, 255, 255);">
                 Dit project heeft me niet alleen geholpen om Monogame te leren, maar het heeft me ook
                 laten zien wat er mogelijk is als je toewijding en doorzettingsvermogen hebt. Het heeft mijn passie voor
                 game-ontwikkeling alleen maar versterkt, en ik kijk ernaar uit om meer uitdagende projecten aan te
                 pakken en mijn vaardigheden verder te verbeteren.</p>
+
+            <P style="color:rgb(255, 255, 255);">
+                [Alle game art is gemaakt met Aseprite]</p>
+            <div>
+                <img src="GameOverScreen.png" style="width: 150; height: 225px;" alt="GameOverScreen">
+                <img src="GameWinScreen.png" style="width: 150; height: 225px;" alt="GameWinScreen">
+                <img src="MainMenu.png" style="width: 150; height: 225px;" alt="MainMenu">
+                <div class=" d-flex justify-content-center py-3" style="margin-right: 30%;">
+                    <a href="https://store.steampowered.com/app/431730/Aseprite/" target="_blank"
+                        style="text-decoration: none; color: white;">
+                        <img src="AsepriteLogo.png" class="card-img-top p-2" alt="Aseprite"
+                            style="width: 240px; height: 120px;">
+                    </a>
+                </div>
+            </div>
+
         </div>
+
     </div>
 
-    <div id="AlrDark" class="py-2 bg-dark">
-        <p class="m-1 text-light d-flex justify-content-center">Game Art</p>
-    </div>
-
-                <div id="carousel" class="carousel p-4" data-ride="carousel" data-interval="3000" data-pause="false"
-                    style="width: 400px; height: 600px;">
-                    <div class="carousel-inner">
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="GameWinScreen.png" alt="First slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="GameOverScreen.png" alt="Second slide">
-                        </div>
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="mainmenu.png" alt="Third slide">
-                        </div>
-                    </div>
-                </div>
-
-            
-                <div id="carousel" class="carousel p-4" data-ride="carousel" data-interval="3000" data-pause="false"
-                    style="width: 224px; height: 224px;">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="Dragonfly.png" alt="First slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="ZwaluwSchip.png" alt="Second slide">
-                        </div>
-                    </div>
-                    <div class="py-3">
-                <P style="color:rgb(255, 255, 255);" class="p-4">Alle sprites heb ik zelf gemaakt voor dit project met
-                    behulp van het programma aseprite </P>
-            </div>
-                </div>
-
-
-            <div class=" d-flex justify-content-center py-3">
-                <a href="https://store.steampowered.com/app/431730/Aseprite/" target="_blank"
-                    style="text-decoration: none; color: white;">
-                    <img src="AsepriteLogo.png" class="card-img-top p-2" alt="Aseprite"
-                        style="width: 240px; height: 120px;">
-                </a>
-            </div>
-            
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.7.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
