--- a/monogame.html
+++ b/monogame.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Portfolio Rafael</title>
+    <title>Portfolio Rafael-Monogame</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -72,7 +72,12 @@
                 pakken en mijn vaardigheden verder te verbeteren.</p>
 
             <P style="color:rgb(255, 255, 255);">
-                [Alle game art is gemaakt met Aseprite]</p>
+                [Alle game art is gemaakt met Aseprite]
+            </p>
+            <P style="color:rgb(255, 255, 255);">
+                [Alle game audio is gemaakt met <a href="https://www.image-line.com/fl-studio/" target="_blank">fl studio 21</a>
+            </p>
+
             <div>
                 <img src="GameOverScreen.png" style="width: 150; height: 225px;" alt="GameOverScreen">
                 <img src="GameWinScreen.png" style="width: 150; height: 225px;" alt="GameWinScreen">
