--- a/blender.html
+++ b/blender.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="index.html#Projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacts</a>
+                        <a class="nav-link" href="blender.html#Catalogus">Catalogus</a>
                     </li>
                     <li>
                         <div id="Buttonbg" class="container bg-transparent">
@@ -39,14 +39,14 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav iconClass"> 
-                    <li class="nav-item p-2">
+                    <li class="nav-item px-2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white"
                             class="bi bi-linkedin" viewBox="0 0 16 16">
                             <path
                                 d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
                         </svg>
                     </li>
-                    <li class="nav-item p-2"> 
+                    <li class="nav-item px-2"> 
                         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white"
                             class="bi bi-github" viewBox="0 0 16 16">
                             <path
@@ -94,7 +94,7 @@
     </div>
 
     <div id="AlrDark" class="py-2 bg-dark">
-        <p class="m-1 text-light d-flex justify-content-center">Catalogus</p>
+        <p id="Catalogus" class="m-1 text-light d-flex justify-content-center">Catalogus</p>
     </div>
 
     <div class="row row-cols-1 p-4 row-cols-md-3 g-4 justify-content-center">
