--- a/blender.html
+++ b/blender.html
@@ -38,20 +38,24 @@
                         </div>
                     </li>
                 </ul>
-                <ul class="navbar-nav iconClass"> 
+                <ul class="navbar-nav iconClass">
                     <li class="nav-item px-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white"
-                            class="bi bi-linkedin" viewBox="0 0 16 16">
-                            <path
-                                d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
-                        </svg>
+                        <a href="https://www.linkedin.com/in/rafael-alcazar-paradas-52062626b/" target="_blank"
+                            style="text-decoration: none; color: white;">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white"
+                                class="bi bi-linkedin" viewBox="0 0 16 16">
+                                <path
+                                    d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
+                            </svg></a>
                     </li>
-                    <li class="nav-item px-2"> 
-                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white"
-                            class="bi bi-github" viewBox="0 0 16 16">
+                    <li class="nav-item px-2">
+                        <a href="https://github.com/Rafael-Roc" target="_blank"
+                            style="text-decoration: none; color: white;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white" class="bi bi-github"
+                            viewBox="0 0 16 16">
                             <path
                                 d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
-                        </svg>
+                        </svg></a>
                     </li>
                 </ul>
             </div>
@@ -88,7 +92,7 @@
             </p>
         </div>
         <div class="col-xl-5 container rounded-1">
-            <img src="BioshockBigdaddy.png" class="card-img-top mx-auto d-block" alt="Rafael">
+            <img src="Blender/Photos/BioshockBigdaddy.png" class="card-img-top mx-auto d-block" alt="Rafael">
             <p>[ Replica van de big daddy enemy van bioshock gemaakt in blender door mij ]</p>
         </div>
     </div>
@@ -100,11 +104,11 @@
     <div class="row row-cols-1 p-4 row-cols-md-3 g-4 justify-content-center">
         <div class="col ">
             <div class="card">
-                <img src="Rifle.png" class="card-img-top" alt="Rifle">
+                <img src="Blender/Photos/Rifle.png" class="card-img-top" alt="Rifle">
                 <div class="card-body">
                     <h5 class="card-title">Rifle</h5>
                     <button type="button" class="btn btn-warning">
-                        <a href="Rifle.blend" style="text-decoration: none; color: white;">
+                        <a href="Blender/Blend files/Rifle.blend" style="text-decoration: none; color: white;">
                             <strong>Rifle.blend</strong>
                             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor"
                                 style="vertical-align: -1px;" class="bi bi-download" viewBox="0 0 16 16">
@@ -120,31 +124,31 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="Barrel.png" class="card-img-top" alt="barrel">
+                <img src="Blender/Photos/Barrel.png" class="card-img-top" alt="barrel">
                 <div class="card-body">
                     <h5 class="card-title">Barrel</h5>
                     <button type="button" class="btn btn-warning">
-                        <a href="Barrel.blend" style="text-decoration: none; color: white;">
-                            <strong>Barrel.blend</strong>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor"
+                        <!--<a href="Barrel.blend" style="text-decoration: none; color: white;">-->
+                            <strong>Model not available :[</strong>
+                            <!--<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor"
                                 style="vertical-align: -1px;" class="bi bi-download" viewBox="0 0 16 16">
                                 <path
                                     d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5" />
                                 <path
                                     d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z" />
-                            </svg>
-                        </a>
+                            </svg>-->
+                        <!--</a>-->
                     </button>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card">
-                <img src="Revolver.gif" class="card-img-top" alt="revolver">
+                <img src="Blender/Photos/Revolver.gif" class="card-img-top" alt="revolver">
                 <div class="card-body">
                     <h5 class="card-title">Revolver</h5>
                     <button type="button" class="btn btn-warning">
-                        <a href="Revolver.blend" style="text-decoration: none; color: white;">
+                        <a href="Blender/Blend files/Revolver.blend" style="text-decoration: none; color: white;">
                             <strong>Revolver.blend</strong>
                             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor"
                                 style="vertical-align: -1px;" class="bi bi-download" viewBox="0 0 16 16">
@@ -160,11 +164,11 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="AlienRifle.gif" class="card-img-top" alt="...">
+                <img src="Blender/Photos/AlienRifle.gif" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">AlienRifle</h5>
                     <button type="button" class="btn btn-warning">
-                        <a href="AlienRifle.blend" style="text-decoration: none; color: white;">
+                        <a href="Blender/Blend files/" style="text-decoration: none; color: white;">
                             <strong>AlienRifle.blend</strong>
                             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor"
                                 style="vertical-align: -1px;" class="bi bi-download" viewBox="0 0 16 16">
@@ -180,11 +184,11 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="Shotgun.png" class="card-img-top" alt="...">
+                <img src="Blender/Photos/Shotgun.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Shotgun</h5>
                     <button type="button" class="btn btn-warning">
-                        <a href="Shotgun.blend" style="text-decoration: none; color: white;">
+                        <a href="Blender/Photos/Shotgun.png" style="text-decoration: none; color: white;">
                             <strong>Shotgun.blend</strong>
                             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor"
                                 style="vertical-align: -1px;" class="bi bi-download" viewBox="0 0 16 16">
@@ -200,11 +204,11 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="Donut.png" class="card-img-top" alt="...">
+                <img src="Blender/Photos/Donut.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Donut</h5>
                     <button type="button" class="btn btn-warning">
-                        <a href="Donut.blend" style="text-decoration: none; color: white;">
+                        <a href="Blender/Blend files/Donut.blend" style="text-decoration: none; color: white;">
                             <strong>Donut.blend</strong>
                             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor"
                                 style="vertical-align: -1px;" class="bi bi-download" viewBox="0 0 16 16">
@@ -220,11 +224,11 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="ComputerChipSpider.gif" class="card-img-top" alt="ChipSpider">
+                <img src="Blender/Photos/ComputerChipSpider.gif" class="card-img-top" alt="ChipSpider">
                 <div class="card-body">
                     <h5 class="card-title">ComputerChipSpider</h5>
                     <button type="button" class="btn btn-warning">
-                        <a href="ComputerChipSpider.blend" style="text-decoration: none; color: white;">
+                        <a href="Blender/Blend files/ComputerChipSpider.blend" style="text-decoration: none; color: white;">
                             <strong>ComputerChipSpider.blend</strong>
                             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor"
                                 style="vertical-align: -1px;" class="bi bi-download" viewBox="0 0 16 16">
