Feat: Fix Photos

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div id="Projects" class="row justify-content-center row-cols-1 row-cols-md-3 g-4 p-5">
         <div class="col">
             <div class="card h-100">
-                <img src="Blender.png" class="card-img-top" alt="Blender">
+                <img src="Blender/Photos/Blender.png" class="card-img-top" alt="Blender">
                 <div class="card-body">
                     <h5 class="card-title">Blender</h5>
                     <p class="card-text">Voorbeelden van models die ik heb gemaakt in blender</p>
@@ -97,7 +97,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="FlamethrowerTechDemo.png" class="card-img-top" alt="Unity">
+                <img src="Photos/FlamethrowerTechDemo.png" class="card-img-top" alt="Unity">
                 <div class="card-body">
                     <h5 class="card-title">Unity</h5>
                     <p class="card-text">Projecten die ik gemaakt heb in de unity Engine</p>
@@ -107,7 +107,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="SpaceShooter.png" class="card-img-top" alt="monogame">
+                <img src="Photos/SpaceShooter.png" class="card-img-top" alt="monogame">
                 <div class="card-body">
                     <h5 class="card-title">Monogame (C#)</h5>
                     <p class="card-text">Projecten die ik gemaakt heb in de Monogame Engine</p>
