--- a/monogame.html
+++ b/monogame.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="inline.css">
     <style>
         body {
-            background-image: url('StarBackground.jpg');
+            background-image: url('Photos/StarBackground.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -80,7 +80,7 @@
     <div class="row p-4 d-flex justify-content-center">
         <div class="col-lg-3">
             <video width="400" height="600" controls>
-                <source src="Starlin-k.mp4" type="video/mp4">
+                <source src="Photos/Starlin-k.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
@@ -106,13 +106,13 @@
             </p>
 
             <div>
-                <img src="GameOverScreen.png" style="width: 150; height: 225px;" alt="GameOverScreen">
-                <img src="GameWinScreen.png" style="width: 150; height: 225px;" alt="GameWinScreen">
-                <img src="MainMenu.png" style="width: 150; height: 225px;" alt="MainMenu">
+                <img src="Photos/GameOverScreen.png" style="width: 150; height: 225px;" alt="GameOverScreen">
+                <img src="Photos/GameWinScreen.png" style="width: 150; height: 225px;" alt="GameWinScreen">
+                <img src="Photos/MainMenu.png" style="width: 150; height: 225px;" alt="MainMenu">
                 <div class=" d-flex justify-content-center py-3" style="margin-right: 30%;">
                     <a href="https://store.steampowered.com/app/431730/Aseprite/" target="_blank"
                         style="text-decoration: none; color: white;">
-                        <img src="AsepriteLogo.png" class="card-img-top p-2" alt="Aseprite"
+                        <img src="Photos/AsepriteLogo.png" class="card-img-top p-2" alt="Aseprite"
                             style="width: 240px; height: 120px;">
                     </a>
                 </div>
