--- a/unity.html
+++ b/unity.html
@@ -77,7 +77,7 @@
         <div class="row p-4 d-flex justify-content-center bg-info py-3">
             <div class="col-lg-3">
                 <video width="400" height="240" controls>
-                    <source src="Flamethrower.mp4" type="video/mp4">
+                    <source src="Photos/Flamethrower.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -106,13 +106,13 @@
                     boxhandschoen en meer </p>
             </div>
             <div class="col-xl-3">
-                <img src="microgame_gameplay.gif" style="width: 150; height: 225px;" alt="GameOverScreen">
+                <img src="Photos/microgame_gameplay.gif" style="width: 150; height: 225px;" alt="GameOverScreen">
             </div>
         </div>
 
         <div class="row p-4 d-flex justify-content-center bg-info">
             <div class="col-xl-3">
-                <img src="ClickerGame.png" class="rounded-2" style="width: 400px; height: 250px;" alt="GameOverScreen">
+                <img src="Photos/ClickerGame.png" class="rounded-2" style="width: 400px; height: 250px;" alt="GameOverScreen">
             </div>
             <div class="col-xl-6 px-5">
                 <h1>ClickerGame (In progress)</h1>
