Feat: Thumbnail Voor op de voorpagina

--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@
         </div>
     </nav>
 
+    <header>
+        <div class="card text-white border-0 ">
+            <img src="https://picsum.photos/id/180/2000/700?grayscale" class="card-img w-100 img-fluid rounded-0"
+                alt="Thumbnail">
+            <div class="card-img-overlay" style="margin-top: 10%">
+                <div class="text-center">
+                    <h2 class="card-title text-warning">~Rafael~</h2>
+                    <h4 class="card-title">"Logic will get you to point A to B. Imagination will take you Everywhere."</h4>
+                    <h4 class="card-title">-Albert Einstein</h4>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
     <!--Bottom text-->
     <div class="row justify-content-center container.fluid bg-warning HeaderClass">
         <div class="col-xl-2 container rounded-1">
@@ -117,5 +132,9 @@
         </div>
     </div>
 </body>
+
+<footer>
+    <div class="bg-black"> Whatsup</div>
+</footer>
 
 </html>
