Update: ReusableComponents card

--- a/index.html
+++ b/index.html
@@ -130,6 +130,16 @@
                 </div>
             </div>
         </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="Photos/ReusableComponents.png" class="card-img-top" alt="Unity 6">
+                <div class="card-body">
+                    <h5 class="card-title">Unity C#</h5>
+                    <p class="card-text">Project waar ik gebruik heb gemaakt van het Single Responsibility Principle</p>
+                    <a href="reusableComponents.html" class="btn btn-warning text-white"><strong>lees verder</strong></a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
