--- a/monogame.html
+++ b/monogame.html
@@ -80,7 +80,7 @@
     <div class="row p-4 d-flex justify-content-center">
         <div class="col-lg-3">
             <video width="400" height="600" controls>
-                <source src="Photos/Starlin-k.mp4" type="video/mp4">
+                <source src="Videos/Starlin-k.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
