--- a/reusableComponents.html
+++ b/reusableComponents.html
@@ -93,6 +93,8 @@
                     </svg>
                 </a>
             </button>
+            <img src="Photos/GameplayScreenshot.1.png" style="padding-top: 10%;" , width="400" class="mb-3" alt="image1">
+            <img src="Photos/GameplayScreenshot.2.png" width="400" alt="image2">
         </div>
         <div class="col-xl-6 px-5">
             <p style="color:rgb(0, 0, 0);">Scarab Shooter is een Project waar ik aan gewerkt heb op school
